crates/server/tests/analysis/snapshots/r#mod__analysis__alpha034__variable_scope-3.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&47)
---
Some(
    SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 35,
        end: 36,
    },
)
