crates/server/tests/analysis/snapshots/r#mod__analysis__alpha034__variable_scope.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&16)
---
Some(
    SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 9,
        end: 10,
    },
)
